update the repo page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-My Github repositories
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Hello, world! </title>
+</head>
+
+
+<body>
+    <center>
+        <h2>
+            <br>
+            My Github repositories
+            <br>
+        </h2>
+        <table width=800px>
+            <td>
+                <h3>
+                    <a href="https://github.com/srishina/delayq.git">https://github.com/srishina/delayq.git</a> :
+                    Delayed queue in go.<br>
+                    <p style="text-align:justify">
+                        DelayQueue is a synchronized delay queue which is similar or a specialized form of a priority
+                        queue. The queue orders the elements based on their delay time. Only the expired elements can be
+                        retrieved from the queue.
+                    </p>
+                    <a href="https://github.com/srishina/mqtt.ts.git">https://github.com/srishina/mqtt.ts.git</a> :
+                    Typescript library for the MQTTv5 protocol.<br>
+                    <p style="text-align:justify">
+                        mqtt-ts is a client library for the MQTTv5 protocol, written in typescript for node and browser.
+                        The library uses promises and async/wait patterns.
+                    </p>
+                    <a href="https://github.com/srishina/mqtt.go.git">https://github.com/srishina/mqtt.go.git</a> :
+                    Go implementation of MQTTv5 protocol.<br>
+                    <p style="text-align:justify">
+                        MQTTv5 client and server library that implements MQTTv5 protocol.
+                    </p>
+                </h3>
+            </td>
+        </table>
+    </center>
+</body>
+
+</html>
